Regression: Face Sets from Edit Mode Selection no longer working #104588

Closed
opened 2023-02-10 19:39:57 +01:00 by Ethical Vegan · 2 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24

Blender Version
Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: rB55485cb379f7
Worked: 3.3
Caused by da4bd24c3e

Short description of error
In Blender 3.4.1, in Sculpt mode, {Face Sets -> Face Set from Edit Mode Selection} does not correctly create a face set from all the vertices selected in Edit Mode. It works perfectly in Blender 3.0.1

Exact steps for others to reproduce the error

The issue can be easily seen with a triangulated mesh:

  1. add a Subdivision modifier to the cube, and change "Levels Viewport" to "2"
    1.png

  2. Apply the Subdivision modifier

  3. add a Triangulate modifier
    3.png

  4. Apply the Triangulate modifier

  5. in Edit Mode, select all the vertices

  6. in Sculpt mode, in the top menu, select {Face Sets -> Face Set from Edit Mode Selection}
    6.png

  7. as you can see the Face Set does not include all polygons. In Blender 3.0.1, all the polygons change color, indicating that it works.

The issue can also happen on a mesh with quads:

  1. delete the cube, then add a Monkey

  2. add a Remesh modifier to the cube, and select "Smooth"
    a2.png

  3. Apply the Remesh modifier

  4. in Edit Mode, select all the vertices

  5. in Sculpt mode, in the top menu, select {Face Sets -> Face Set from Edit Mode Selection}
    a6.png

  6. as you can see, some polygons are missing from the Face Set

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24 **Blender Version** Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: `rB55485cb379f7` Worked: 3.3 Caused by da4bd24c3e6122c74fbc6dcc81604ee7a0dd3fe0 **Short description of error** In Blender 3.4.1, in Sculpt mode, {Face Sets -> Face Set from Edit Mode Selection} does not correctly create a face set from all the vertices selected in Edit Mode. It works perfectly in Blender 3.0.1 **Exact steps for others to reproduce the error** The issue can be easily seen with a triangulated mesh: 1. add a Subdivision modifier to the cube, and change "Levels Viewport" to "2" ![1.png](/attachments/9848d6f6-717e-4f46-9912-9a68c4e7c366) 2. Apply the Subdivision modifier 3. add a Triangulate modifier ![3.png](/attachments/78873a6a-44ae-494f-8d36-c91754237a2d) 4. Apply the Triangulate modifier 5. in Edit Mode, select all the vertices 6. in Sculpt mode, in the top menu, select {Face Sets -> Face Set from Edit Mode Selection} ![6.png](/attachments/4a2d63c3-9583-4cda-b669-309a733592fd) 7. as you can see the Face Set does not include all polygons. In Blender 3.0.1, all the polygons change color, indicating that it works. The issue can also happen on a mesh with quads: 1. delete the cube, then add a Monkey 2. add a Remesh modifier to the cube, and select "Smooth" ![a2.png](/attachments/7a7a6013-797d-46b7-9518-de7068c9ed33) 3. Apply the Remesh modifier 4. in Edit Mode, select all the vertices 5. in Sculpt mode, in the top menu, select {Face Sets -> Face Set from Edit Mode Selection} ![a6.png](/attachments/5f2ad80b-4bd0-4d16-b710-c0eddfc5d9e9) 6. as you can see, some polygons are missing from the Face Set
335 KiB
412 KiB
373 KiB
469 KiB
319 KiB
Ethical Vegan added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-02-10 19:39:58 +01:00
Member

Hi, thanks for the report. Can confirm the regression. Bisecting...

Hi, thanks for the report. Can confirm the regression. Bisecting...
Pratik Borhade changed title from Sculpt Mode - Face Sets from Edit Mode Selection - no longer working to Regression: Face Sets from Edit Mode Selection no longer working 2023-02-13 13:49:42 +01:00
Member
Caused by da4bd24c3e6122c74fbc6dcc81604ee7a0dd3fe0 @HooglyBoogly ^
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-13 20:17:00 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104588
No description provided.