Fix #104588: Initialize Face Sets from edit mode selection broken

Mistake in da4bd24c3e6122c74fbc